# katana-kleaver

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ase/: Sprite-0001.aseprite  floor.ase  header_banner.ase  itch-bg.ase  katana.ase  master_melon.aseprite  medals.ase  melon_big.ase  melon_small.ase  orange.ase  orange_halo.ase  samurai.ase  samurai_die.ase  samurai_run.ase  samurai_slash.ase  small.ase  thing.ase  tv_border.ase
custom_shells/: shell_release.html
include/: asset_loader.h  ball.h  camera.h  circular_button.h  firefly.h  game.h  global.h  linked_list.h  particle.h  player.h  renderer.h  score_handler.h  slider_button.h  spawner.h  splash_screen.h  sprite.h  storage.h  tutorial.h  wave_handler.h  window_handler.h
sources/: asset_loader.c  ball.c  ball.h  camera.c  circular_button.c  firefly.c  g_setup.c  g_splash_screen.c  game.c  global.c  global.h  linked_list.c  ll_freeing_queue.c  main.c  particle.c  player.c  player.h  renderer.c  score_handler.c  sh_medal.c  slider_button.c  spawner.c  splash_screen.c  sprite.c  storage.c  tutorial.c  wave_handler.c  window_handler.c
